Keep YAML simple

--- a/.github/workflows/preflight.yml
+++ b/.github/workflows/preflight.yml
@@ -29,23 +29,18 @@ jobs:
       - name: Get go version
         id: go-version
         run: echo "name=version::$(go env GOVERSION)" >> $GITHUB_OUTPUT
-      - name: FLY_PREFLIGHT_TEST_APP_PREFIX
+      - name: Install gotesplit, set FLY_PREFLIGHT_TEST_APP_PREFIX and build flyctl
         run: |
+          curl -sfL https://raw.githubusercontent.com/Songmu/gotesplit/v0.2.1/install.sh | sh -s
           echo "FLY_PREFLIGHT_TEST_APP_PREFIX=pf-gha-$(openssl rand -hex 4)" >> "$GITHUB_ENV"
+          make
       - name: Run preflight tests
         env:
           FLY_PREFLIGHT_TEST_ACCESS_TOKEN: ${{ secrets.FLYCTL_PREFLIGHT_CI_FLY_API_TOKEN }}
           FLY_PREFLIGHT_TEST_FLY_ORG: flyctl-ci-preflight
           FLY_PREFLIGHT_TEST_FLY_REGIONS: iad syd
         run: |
-          make
-
-          curl -sfL https://raw.githubusercontent.com/Songmu/gotesplit/v0.2.1/install.sh | sh -s
-
-          if [[ "${{ github.ref }}" != "refs/heads/master" ]]; then
-            test_opts=-short
-          fi
-          bin/gotesplit -total ${{ matrix.parallelism }} -index ${{ matrix.index }} github.com/superfly/flyctl/test/preflight/... -- --tags=integration -v -timeout=60m $test_opts
+          PATH=$PWD/bin:$PATH ./scripts/preflight.sh -r "${{ github.ref }}" -t "${{ matrix.parallelism }}" -i "${{ matrix.index }}"
       - name: Post failure to slack
         if: ${{ github.ref == 'refs/heads/master' && failure() }}
         uses: slackapi/slack-github-action@007b2c3c751a190b6f0f040e47ed024deaa72844
