Do not print history for preflight test failures
There is often db creds and stuff like that in them. Plus, this encourages folks to run the test locally when reproducing (and that is a good thing).

--- a/.github/workflows/preflight.yml
+++ b/.github/workflows/preflight.yml
@@ -39,6 +39,7 @@ jobs:
           FLY_PREFLIGHT_TEST_ACCESS_TOKEN: ${{ secrets.FLYCTL_PREFLIGHT_CI_FLY_API_TOKEN }}
           FLY_PREFLIGHT_TEST_FLY_ORG: flyctl-ci-preflight
           FLY_PREFLIGHT_TEST_FLY_REGIONS: iad syd
+          FLY_PREFLIGHT_TEST_NO_PRINT_HISTORY_ON_FAIL: "true"
         run: |
           PATH=$PWD/bin:$PATH ./scripts/preflight.sh -r "${{ github.ref }}" -t "${{ matrix.parallelism }}" -i "${{ matrix.index }}"
       - name: Post failure to slack
