--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -238,7 +238,7 @@ jobs:
     name: Publish to Winget
     needs: release
     if: ${{ !contains(github.ref, 'pre') }}
-    runs-on: windows-latest # Action can only be run on windows
+    runs-on: ubuntu-latest
     steps:
       - uses: vedantmgoyal2009/winget-releaser@v2
         with:
