Parse build.build_target as build-target

--- a/internal/appconfig/testdata/old-format.toml
+++ b/internal/appconfig/testdata/old-format.toml
@@ -5,6 +5,9 @@ app = "foo"
   FOO = "STRING"
   BAR = 123
 
+[build]
+build_target = "thalayer"
+
 [[services]]
   # Stringified internal port
   internal_port = "8080"
