--- a/.github/workflows/preflight_cleanup.yml
+++ b/.github/workflows/preflight_cleanup.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   preflight-tests:
+    if: ${{ github.repository == 'superfly/flyctl' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
