--- a/.github/workflows/preflight.yml
+++ b/.github/workflows/preflight.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   preflight-tests:
+    if: ${{ github.repository == 'superfly/flyctl' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
