Run tests on Windows
I recently added platform-specific .go files in #2526, which broke
Windows build (see #2540). We couldn't catch that during PRs since all
our tests were running on Linux.

This change runs flyctl's normal (not-preflight) tests on Windows and
macOS to catch issues that could break builds.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,11 @@ jobs:
           args: build --clean --snapshot
 
   test:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
