--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,11 @@ on:
   push:
   workflow_dispatch:
 
+# We right now cannot use Go 1.20.6 due to
+# https://community.fly.io/t/git-hub-actions-deployment-error/14126
+env:
+  go_version: 1.20.5
+
 jobs:
   test_build:
     runs-on: ubuntu-latest
@@ -13,8 +18,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.20.5
-          check-latest: true
+          go-version: ${{ env.go_version }}
       - name: "Place wintun.dll"
         run: cp deps/wintun/bin/amd64/wintun.dll ./
       - name: build
@@ -33,8 +37,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.20.5
-          check-latest: true
+          go-version: ${{ env.go_version }}
       - name: Get go version
         id: go-version
         run: echo "name=version::$(go env GOVERSION)" >> $GITHUB_OUTPUT
@@ -59,8 +62,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.20.5
-          check-latest: true
+          go-version: ${{ env.go_version }}
       - name: Get go version
         id: go-version
         run: echo "name=version::$(go env GOVERSION)" >> $GITHUB_OUTPUT
@@ -115,8 +117,7 @@ jobs:
           path: docs
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.20.5
-          check-latest: true
+          go-version: ${{ env.go_version }}
       - name: Publish CLI docs
         id: publish-cli-docs
         env:
@@ -132,8 +133,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.20.5
-          check-latest: true
+          go-version: ${{ env.go_version }}
       - name: Get go version
         id: go-version
         run: echo "name=version::$(go env GOVERSION)" >> $GITHUB_OUTPUT
