--- a/.github/workflows/preflight.yml
+++ b/.github/workflows/preflight.yml
@@ -10,7 +10,7 @@ on:
         required: false
         default: User initiated run
         type: string
-  push:
+  workflow_call:
 
 jobs:
   preflight-tests:
@@ -34,7 +34,10 @@ jobs:
         run: |
           curl -sfL https://raw.githubusercontent.com/Songmu/gotesplit/v0.2.1/install.sh | sh -s
           echo "FLY_PREFLIGHT_TEST_APP_PREFIX=pf-gha-$(openssl rand -hex 4)" >> "$GITHUB_ENV"
-          make
+      - uses: actions/download-artifact@v3
+        with:
+          name: flyctl
+          path: master-build
       - name: Run preflight tests
         id: preflight
         env:
@@ -44,6 +47,8 @@ jobs:
           FLY_PREFLIGHT_TEST_NO_PRINT_HISTORY_ON_FAIL: "true"
           FLY_FORCE_TRACE: "true"
         run: |
+          mv master-build/flyctl bin/flyctl
+          chmod +x bin/flyctl
           export PATH=$PWD/bin:$PATH
           echo -n failed= >> $GITHUB_OUTPUT
           ./scripts/preflight.sh -r "${{ github.ref }}" -t "${{ matrix.parallelism }}" -i "${{ matrix.index }}" -o $GITHUB_OUTPUT
