--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -81,7 +81,7 @@ checksum:
   name_template: "checksums.txt"
 
 snapshot:
-  name_template: "{{incpatch .Version}}-{{.Branch}}+{{.ShortCommit}}"
+  name_template: "{{incpatch .Version}}-snapshot.{{.Branch}}+{{.ShortCommit}}"
 
 changelog:
   sort: asc
