Add support for check's headers in array format

--- a/internal/appconfig/testdata/old-format.toml
+++ b/internal/appconfig/testdata/old-format.toml
@@ -34,6 +34,10 @@ build_target = "thalayer"
     interval = 30000
     timeout = 4000
 
+    [[services.http_checks.headers]]
+      name = "origin"
+      value = "http://localhost:8000"
+
   [[services.http_checks]]
     # Additional check of same type to ensure it is not overriden
     interval = "20s"
