add unit tests for appconfig.Config and machine launch input

--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -83,6 +83,19 @@ console_command = "/bin/bash"
   guest_path = "/path/to/statics"
   url_prefix = "/static-assets"
 
+[[files]]
+  guest_path = "/path/to/hello.txt"
+  raw_value = "aGVsbG8gd29ybGQK"
+
+[[files]]
+  guest_path = "/path/to/secret.txt"
+  secret_name = "SUPER_SECRET"
+
+[[files]]
+  guest_path = "/path/to/config.yaml"
+  local_path = "/local/path/config.yaml"
+  processes = ["web"]
+
 [mounts]
   source = "data"
   destination = "/data"
