--- a/internal/appconfig/testdata/tomachine.toml
+++ b/internal/appconfig/testdata/tomachine.toml
@@ -2,6 +2,7 @@ app = "foo"
 primary_region = "mia"
 kill_signal = "SIGTERM"
 kill_timeout = "10s"
+swap_size_mb = 512
 
 [deploy]
   release_command = "migrate-db"
