--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -55,6 +55,7 @@ console_command = "/bin/bash"
     path = "/"
     protocol = "https"
     tls_skip_verify = true
+    tls_server_name = "sni2.com"
     [http_service.checks.headers]
       My-Custom-Header = "whatever"
 
@@ -115,6 +116,7 @@ console_command = "/bin/bash"
   path = "/status"
   protocol = "https"
   tls_skip_verify = true
+  tls_server_name = "sni3.com"
   [checks.status.headers]
     Content-Type = "application/json"
     Authorization = "super-duper-secret"
@@ -151,6 +153,7 @@ console_command = "/bin/bash"
     path = "/"
     protocol = "https"
     tls_skip_verify = true
+    tls_server_name = "sni.com"
     [services.http_checks.headers]
       My-Custom-Header = "whatever"
 
