Handle beta/prerelease versions of Python, warning explicitly if we have to pin a version.

--- a/scanner/templates/django/Dockerfile
+++ b/scanner/templates/django/Dockerfile
@@ -1,3 +1,6 @@
+{{ if .pinnedPythonVersion -}}
+# TODO: Change to an officially released version of Python before deploying to production.
+{{ end -}}
 ARG PYTHON_VERSION={{ .pythonVersion }}-slim-buster
 
 FROM python:${PYTHON_VERSION}
