--- a/scanner/templates/django/Dockerfile
+++ b/scanner/templates/django/Dockerfile
@@ -8,6 +8,15 @@ FROM python:${PYTHON_VERSION}
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+{{ if .hasPostgres -}}
+# install psycopg2 dependencies.
+RUN apt-get update && apt-get install -y \                                                                                                                                    
+    libpq-dev \                                                                                                                                                               
+    gcc \                                                                                                                                                                     
+    && rm -rf /var/lib/apt/lists/*                                                                                                                                            
+
+{{ end -}}
+
 RUN mkdir -p /code
 
 WORKDIR /code
