proxy_proto_options makes no sense on http_service

--- a/internal/appconfig/testdata/services-ports.toml
+++ b/internal/appconfig/testdata/services-ports.toml
@@ -19,3 +19,10 @@ app = "foo"
     fly-request-id = false
     fly-wasnt-here = "yes, it was"
     multi-valued = ["value1", "value2"]
+
+  [[services.ports]]
+    port = 82
+    handlers = ["proxy_proto"]
+
+    [services.ports.proxy_proto_options]
+    version = "v2"
