--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-dist/
+/dist/
 
 # Local environment settings
 .envrc
