--- a/.github/workflows/preflight.yml
+++ b/.github/workflows/preflight.yml
@@ -17,8 +17,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # parallelism: [10]
+        # index: [0,1,2,3,4,5,6,7,8,9]
         parallelism: [1]
-        index: [0,1,2,3,4,5,6,7,8,9]
+        index: [0]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
