--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ env:
 
 jobs:
   test_build:
-    runs-on: ubuntu-latest
+    runs-on:
+      group: ubuntu-latest-m
     steps:
       - uses: actions/checkout@v3
         with:
