--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ ubuntu-latest-m, macos-latest-xl, windows-latest-l ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
