--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,6 +15,19 @@ jobs:
         with:
           extra_args: --all-files --hook-stage=manual
 
+  # TODO[md]: move this to the test workflow later
+  go_mod_tidy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v3
+    - name: check that 'go mod tidy' is clean
+      run: |
+        ./tool/go mod tidy
+        echo
+        echo
+        git diff --name-only --exit-code || (echo "Please run 'go mod tidy'."; exit 1)
+
   lint:
     strategy:
       matrix:
