--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,10 +9,11 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 
--   repo: https://github.com/tekwizely/pre-commit-golang
-    rev: v1.0.0-rc.1
-    hooks:
-    -   id: go-mod-tidy
+# NOTE[md]: had to comment this out because the plugin doesn't support go 1.21+. This was moved to the checks workflow instead.
+# -   repo: https://github.com/tekwizely/pre-commit-golang
+#     rev: v1.0.0-rc.1
+#     hooks:
+#     -   id: go-mod-tidy
 
 # NOTE: This pre-commit hook is ignored when running on Github Workflow
 # because goalngci-lint github action is much more useful than the pre-commit action.
