--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,9 +1,14 @@
 name: Checks
 
 on:
+  workflow_dispatch:
   pull_request:
   push:
     branches: [master]
+
+permissions:
+  contents: read
+  pull-requests: read
 
 jobs:
   precommit:
