--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -26,6 +26,7 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v3
+    - uses: actions/setup-go@v4
     - name: check that 'go mod tidy' is clean
       run: |
         ./tool/go mod tidy
@@ -37,7 +38,7 @@ jobs:
     strategy:
       matrix:
         go: ['1.21']
-        os: [macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         module: [".", "api"]
     name: lint
     runs-on: ${{ matrix.os }}
