--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -33,7 +33,7 @@ jobs:
     - uses: actions/setup-go@v4
     - name: check that 'go mod tidy' is clean
       run: |
-        ./tool/go mod tidy
+        go mod tidy
         echo
         echo
         git diff --name-only --exit-code || (echo "Please run 'go mod tidy'."; exit 1)
