--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           extra_args: --all-files --hook-stage=manual
 
-  # TODO[md]: move this to the test workflow later
+  # TODO[md]: move this to the test workflow when test is no longer publishing releases
   go_mod_tidy:
     runs-on: ubuntu-latest
     steps:
@@ -33,6 +33,7 @@ jobs:
     - uses: actions/setup-go@v4
     - name: check that 'go mod tidy' is clean
       run: |
+        echo ${go version}
         go mod tidy
         echo
         echo
