--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,6 +20,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
+        with:
+          go-version-file: "go.mod"
+          check-latest: true
       - uses: pre-commit/action@v3.0.0
         with:
           extra_args: --all-files --hook-stage=manual
@@ -31,6 +34,9 @@ jobs:
     - name: checkout
       uses: actions/checkout@v3
     - uses: actions/setup-go@v4
+      with:
+        go-version-file: "go.mod"
+        check-latest: true
     - name: check that 'go mod tidy' is clean
       run: |
         echo $(go version)
@@ -52,6 +58,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version-file: "${{ matrix.module }}/go.mod"
+          check-latest: true
       - uses: golangci/golangci-lint-action@v3
         with:
           version: v1.54
