--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,6 @@ on:
   push:
   workflow_dispatch:
 
-env:
-  go_version: 1.21
-
 jobs:
 
   test:
@@ -18,7 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.go_version }}
+          go-version-file: "go.mod"
+          check-latest: true
       - name: Get go version
         id: go-version
         run: echo "name=version::$(go env GOVERSION)" >> $GITHUB_OUTPUT
@@ -43,7 +41,8 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.go_version }}
+          go-version-file: "go.mod"
+          check-latest: true
       - name: Get go version
         id: go-version
         run: echo "name=version::$(go env GOVERSION)" >> $GITHUB_OUTPUT
@@ -98,7 +97,8 @@ jobs:
           path: docs
       - uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.go_version }}
+          go-version-file: "go.mod"
+          check-latest: true
       - name: Publish CLI docs
         id: publish-cli-docs
         env:
@@ -114,7 +114,8 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.go_version }}
+          go-version-file: "go.mod"
+          check-latest: true
       - name: Get go version
         id: go-version
         run: echo "name=version::$(go env GOVERSION)" >> $GITHUB_OUTPUT
