--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -27,28 +27,27 @@ jobs:
         with:
           extra_args: --all-files --hook-stage=manual
 
-  # TODO[md]: move this to the test workflow when test is no longer publishing releases
-  go_mod_tidy:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v3
-    - uses: actions/setup-go@v4
-      with:
-        go-version-file: "go.mod"
-        check-latest: true
-    - name: check that 'go mod tidy' is clean
-      run: |
-        echo $(go version)
-        go mod tidy
-        echo
-        echo
-        git diff --name-only --exit-code || (echo "Please run 'go mod tidy'."; exit 1)
+  # # TODO[md]: move this to the test workflow when test is no longer publishing releases
+  # go_mod_tidy:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: checkout
+  #     uses: actions/checkout@v3
+  #   - uses: actions/setup-go@v4
+  #     with:
+  #       go-version-file: "go.mod"
+  #       check-latest: true
+  #   - name: check that 'go mod tidy' is clean
+  #     run: |
+  #       echo $(go version)
+  #       go mod tidy
+  #       echo
+  #       echo
+  #       git diff --name-only --exit-code || (echo "Please run 'go mod tidy'."; exit 1)
 
   lint:
     strategy:
       matrix:
-        go: ['1.21']
         os: [ubuntu-latest, macos-latest, windows-latest]
         module: [".", "api"]
     name: lint
