--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -54,10 +54,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
-        with:
-          go-version-file: "${{ matrix.module }}/go.mod"
-          check-latest: true
+      # - uses: actions/setup-go@v4
+      #   with:
+      #     go-version-file: "${{ matrix.module }}/go.mod"
+      #     check-latest: true
       - uses: golangci/golangci-lint-action@v3
         with:
           version: v1.54
