--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -31,7 +31,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
+        # TODO[md]: run this on these once the horrendous performance on macos & windows is fixed
+        # os: [ubuntu-latest, macos-latest, windows-latest]
         module: [".", "api"]
     name: lint
     runs-on: ${{ matrix.os }}
