--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -4,6 +4,7 @@ kill_timeout = "3s"
 swap_size_mb = 512
 primary_region = "sea"
 console_command = "/bin/bash"
+host_dedication_id = "06031957"
 
 [experimental]
   cmd = ["cmd"]
