--- a/scanner/templates/python/Procfile
+++ b/scanner/templates/python/Procfile
@@ -1,2 +1,2 @@
-# Modify this Procfile to fit your needs
-web: gunicorn server:app
+# TODO: Modify this Procfile to fit your needs
+web: gunicorn app:app
