--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Run tests
         run: go test ./...
       - name: Run API tests
-        run: go test ./api/...
+        run: cd api && go test ./...
 
 
   precommit:
