--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -22,8 +22,13 @@ jobs:
           echo "json=$(go run ./tools/version)" >> "$GITHUB_OUTPUT"
       - name: Print version numbers
         run: |
-          echo "Version JSON: ${{ steps.version.outputs.json }}"
-      - name: Print steps
+          echo "### Release Info :rocket:" >> $GITHUB_STEP_SUMMARY
+          echo "Version: ${{ fromJSON(steps.version.outputs.json).nextVersion }}" >> $GITHUB_STEP_SUMMARY
+          echo "Track: ${{ fromJSON(steps.version.outputs.json).track }}" >> $GITHUB_STEP_SUMMARY
+          echo "Commit Time: ${{ fromJSON(steps.version.outputs.json).commitTime }}" >> $GITHUB_STEP_SUMMARY
+          echo "git Ref: ${{ fromJSON(steps.version.outputs.json).ref }}" >> $GITHUB_STEP_SUMMARY
+          echo "Previous version: ${{ fromJSON(steps.version.outputs.json).previousVersion }}" >> $GITHUB_STEP_SUMMARY
+      - name: Create tag
         uses: actions/github-script@v6
         env:
           TAG_NAME: v${{ fromJSON(steps.version.outputs.json).nextVersion }}
@@ -31,4 +36,3 @@ jobs:
           script: |
             const { TAG_NAME } = process.env
             console.log(TAG_NAME)
-
