--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -39,7 +39,7 @@ jobs:
             github.rest.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: 'refs/tags/${TAG_NAME}',
+              ref: `refs/tags/${TAG_NAME}`,
               sha: context.sha
             })
 
