--- a/.goreleaser.2.yml
+++ b/.goreleaser.2.yml
@@ -18,7 +18,7 @@ builds:
     ldflags:
       - -X github.com/superfly/flyctl/internal/buildinfo.environment=production
       - -X github.com/superfly/flyctl/internal/buildinfo.buildDate={{.CommitDate}}
-      - -X github.com/superfly/flyctl/internal/buildinfo.version={{.Version}}
+      - -X github.com/superfly/flyctl/internal/buildinfo.buildVersion={{.Version}}
       - -X github.com/superfly/flyctl/internal/buildinfo.commit={{.ShortCommit}}
 
   - id: macos
@@ -32,7 +32,7 @@ builds:
     ldflags:
       - -X github.com/superfly/flyctl/internal/buildinfo.environment=production
       - -X github.com/superfly/flyctl/internal/buildinfo.buildDate={{.CommitDate}}
-      - -X github.com/superfly/flyctl/internal/buildinfo.version={{.Version}}
+      - -X github.com/superfly/flyctl/internal/buildinfo.buildVersion={{.Version}}
       - -X github.com/superfly/flyctl/internal/buildinfo.commit={{.ShortCommit}}
 
   - id: windows
@@ -46,7 +46,7 @@ builds:
     ldflags:
       - -X github.com/superfly/flyctl/internal/buildinfo.environment=production
       - -X github.com/superfly/flyctl/internal/buildinfo.buildDate={{.CommitDate}}
-      - -X github.com/superfly/flyctl/internal/buildinfo.version={{.Version}}
+      - -X github.com/superfly/flyctl/internal/buildinfo.buildVersion={{.Version}}
       - -X github.com/superfly/flyctl/internal/buildinfo.commit={{.ShortCommit}}
 
 archives:
