--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -62,7 +62,8 @@ jobs:
         with:
           version: latest
           # args: release --clean --release-notes=./tmp/changelog.txt
-          args: release --clean -f .goreleaser.2.yml --fail-fast --snapshot --debug 
+          # args: release --clean -f .goreleaser.2.yml --fail-fast --snapshot --debug 
+          args: release --clean -f .goreleaser.2.yml --fail-fast --debug --skip-publish
         env:
           SNAPSHOT_NAME: ${{ needs.version.outputs.version }}
 
@@ -74,3 +75,4 @@ jobs:
         with:
           name: dist
           path: dist/*
+          retention-days: 1
