--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -75,6 +75,6 @@ jobs:
       #     VERSION: ${{ github.ref_name }}
       - uses: actions/upload-artifact@v3
         with:
-          name: dist
-          path: dist/*
+          name: build-artifacts
+          path: dist/*.*
           retention-days: 1
