Update Nuxt scanner and Dockerfile

--- a/scanner/templates/nuxtjs/Dockerfile
+++ b/scanner/templates/nuxtjs/Dockerfile
@@ -13,20 +13,14 @@ RUN yarn install \
 
 RUN yarn build
 
-RUN rm -rf node_modules && \
-  NODE_ENV=production yarn install \
-  --prefer-offline \
-  --pure-lockfile \
-  --non-interactive \
-  --production=true
-
 FROM node:lts
 
 WORKDIR /app
 
-COPY --from=builder /app  .
+COPY --from=builder /app .
 
 ENV HOST 0.0.0.0
 ENV PORT 8080
 
-CMD [ "yarn", "start" ]
+# Source: https://nuxt.com/docs/getting-started/deployment#entry-point
+CMD ["node", ".output/server/index.mjs"]
