support separate metrics config per process group Similar to other app-config constructs, allow specifying a separate Metrics config per process group with a `processes` field.

--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -39,9 +39,14 @@ host_dedication_id = "06031957"
 [env]
   FOO = "BAR"
 
-[metrics]
+[[metrics]]
   port = 9999
   path = "/metrics"
+
+[[metrics]]
+  port = 9998
+  path = "/metrics"
+  processes = ["web"]
 
 [http_service]
   internal_port = 8080
