--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -12,21 +12,21 @@ jobs:
       max-parallel: 4
       matrix:
         image:
-          - "debian:oldstable-slim"
-          - "debian:stable-slim"
-          - "debian:testing-slim"
-          - "debian:sid-slim"
-          - "ubuntu:18.04"
-          - "ubuntu:20.04"
-          - "ubuntu:22.04"
-          - "ubuntu:22.10"
-          - "ubuntu:23.04"
-          - "elementary/docker:stable"
-          - "elementary/docker:unstable"
-          - "amazonlinux:latest"
-          - "archlinux:latest"
-          - "alpine:3.14"
-          - "alpine:latest"
+          # - "debian:oldstable-slim"
+          # - "debian:stable-slim"
+          # - "debian:testing-slim"
+          # - "debian:sid-slim"
+          # - "ubuntu:18.04"
+          # - "ubuntu:20.04"
+          # - "ubuntu:22.04"
+          # - "ubuntu:22.10"
+          # - "ubuntu:23.04"
+          # - "elementary/docker:stable"
+          # - "elementary/docker:unstable"
+          # - "amazonlinux:latest"
+          # - "archlinux:latest"
+          # - "alpine:3.14"
+          # - "alpine:latest"
           - "alpine:edge"
         deps:
           - curl
@@ -38,6 +38,6 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4
     - name: run installer
-      run: installers/install.sh
+      run: sh ./installers/install.sh
     - name: check that binary is installed
       run: fly version
