--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -34,6 +34,8 @@ jobs:
         # deps:
         #   - curl
     runs-on: ubuntu-latest
+    env:
+      SHELL: /bin/bash
     container:
       image: ${{ matrix.image }}
       options: --user root
