--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -64,7 +64,7 @@ jobs:
           - "ubuntu-latest"
           - "macos-latest"
           - "windows-latest"
-    runs-on: ${{ matrix.os }}}
+    runs-on: ${{ matrix.os }}
     steps:
     - name: checkout
       uses: actions/checkout@v4
