--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -78,4 +78,4 @@ jobs:
       run: ./installers/install.ps1
       if: contains(matrix.os, 'windows')
     - name: Check that `fly` is in PATH and is executable
-      run: fly version
+      run: flyctl version
